Feature/gbbe 268 block transactions chart (#81)
* Add transactions per block endpoint

* Rename endpoint

* Update swagger; update package version

* Add custom return type

* Fix formatting

* Use Entity::find()
